Implement admin dashboard functionality, including AdminController and AdminService for dashboard stats; add GroupController and GroupService for group management features; create NotificationController and NotificationService for user notifications; enhance AuthService for admin profile creation; implement email notification system; update application properties for email configuration.